<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.rxandroidexample.scene.registration.RegistrationTodoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".scene.registration.RegistrationTodoActivity">

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/title"
            android:text="@={viewModel.title}"
            android:layout_marginHorizontal="15dp"/>

        <EditText
            android:id="@+id/descriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleEdit"
            android:hint="@string/description"
            android:text="@={viewModel.description}"
            android:maxLines="1"
            android:layout_marginHorizontal="15dp"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{()->viewModel.addTodo()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>