<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.rxandroidexample.scene.start.StartViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".scene.start.StartFragment"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="30dp"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/moveSecondFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/move_second_fragment"
            android:onClick="@{v->viewModel.moveSecondFragment()}"/>

        <Button
            android:id="@+id/moveTodoFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/moveSecondFragmentButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/move_todo_fragment"
            android:onClick="@{v->viewModel.moveTodoListFragment()}"/>

        <Button
            android:id="@+id/moveComposeActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/moveSecondFragmentButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/move_compose_activity"
            android:onClick="@{v->viewModel.moveComposeActivity()}"/>

        <Button
            android:id="@+id/moveWordsNoteActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/moveSecondFragmentButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/move_word_note_activity"
            android:onClick="@{v->viewModel.moveWordsNoteActivity()}"/>

    </LinearLayout>
</layout>
